--- a/app/styles/components/credit-card.scss
+++ b/app/styles/components/credit-card.scss
@@ -1,10 +1,14 @@
 .credit-card {
-    display:inline-block;
-    border: 1px solid;
-    border-color: #c0d0e0;
-    border-radius: 4px;
-    padding: 1em;
-    width: 200px;
-    height:120px;
-    margin: 2em;
+  display: inline-block;
+  border: 1px solid;
+  border-color: #c0d0e0;
+  border-radius: 4px;
+  padding: 1em;
+  width: 200px;
+  height: 120px;
+  margin: 2em;
+  border-color: rgb(0, 128, 0);
+  &.is-expired {
+    border-color: rgb(255, 0, 0);
+  }
 }
